--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:7bb17d545ea387becdce9644f51573f1@angelfish.redistogo.com:10020/
   channel_prefix: pop-roulette_production
